<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/theme">
        <ListPreference
            app:defaultValue="-1"
            app:dependency="theme"
            app:dialogTitle="@string/choose"
            app:entries="@array/themes_entries"
            app:entryValues="@array/themes_values"
            app:iconSpaceReserved="false"
            app:key="theme"
            app:title="@string/change_theme"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/lang">
        <ListPreference
            app:dependency="change_lang"
            app:dialogTitle="@string/choose"
            app:entries="@array/app_lang_arrays"
            app:entryValues="@array/app_lang_arrays"
            app:iconSpaceReserved="false"
            app:key="change_lang"
            app:title="@string/change_language"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>