<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/search_item"
        android:icon="@drawable/ic_search"
        app:itemIconTint="@color/white"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:title="" />
    <item android:id="@+id/sort_item"
        android:icon="@drawable/ic_sort"
        app:itemIconTint="@color/white"
        app:showAsAction="always"
        android:title="@string/sort_by">
        <menu>
            <item android:id="@+id/sort_cases"
                android:title="@string/sort_by_cases"/>

            <item android:id="@+id/sort_recovered"
                android:title="@string/sort_by_recovered"/>

            <item android:id="@+id/sort_deaths"
                android:title="@string/sort_by_deaths"/>
        </menu>
    </item>
</menu>