<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.example.tracker.ui.about.AboutFragment">

   <LinearLayout
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <ImageButton
           android:id="@+id/icon_link"
           android:layout_width="220dp"
           android:layout_height="220dp"
           android:layout_gravity="center_horizontal"
           android:background="@drawable/virus_original" />

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/app_name"
           android:textAlignment="center"
           android:textColor="@color/primary_text"
           android:textSize="25sp"
           android:theme="@style/TitleTextStyle" />

       <TextView
           android:textColor="@color/primary_text"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textAlignment="center"
           android:layout_margin="10dp"
           android:text="@string/about_app_info"
           android:theme="@style/NewsTitleTextStyle" />
   </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/developer_links"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/TitleCardTextSize"
            android:theme="@style/SecondaryTextStyle"
            android:layout_height="wrap_content">

        </TextView>
        <FrameLayout
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/telegram_link"
                android:layout_gravity="left"
                android:background="@drawable/telegram_logo"
                android:layout_width="40dp"
                android:layout_height="40dp"/>
            <ImageButton
                android:id="@+id/gmail_link"
                android:background="@drawable/gmail_icon"
                android:layout_gravity="center"
                android:layout_width="40dp"
                android:layout_height="40dp"/>
            <ImageButton
                android:layout_gravity="right"
                android:id="@+id/github_link"
                android:background="@drawable/github_logo_dark"
                android:layout_width="40dp"
                android:layout_height="40dp"/>
        </FrameLayout>
    </LinearLayout>
</FrameLayout>