<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:padding="16dp" android:layout_height="wrap_content"
    android:layout_width="wrap_content">

    <com.google.android.material.card.MaterialCardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/map_info_card"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="false"
        android:elevation="1dp"
        android:orientation="vertical"
        app:cardCornerRadius="@dimen/corner_radius"
        app:contentPadding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center">

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/flag"
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    app:roundingBorderColor="@color/background"
                    app:roundingBorderWidth="1dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/country"
                        style="@style/TitleTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:text="Country"
                        android:textAlignment="center"
                        android:textColor="@color/primary_text" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:orientation="vertical">

                    <TextView
                        style="@style/NewsTitleTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/cases"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/cases"
                        style="@style/PrimaryTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textAlignment="center"
                        android:textColor="@color/blue" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:orientation="vertical">

                    <TextView
                        style="@style/NewsTitleTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/recovered"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/recovered"
                        style="@style/PrimaryTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textAlignment="center"
                        android:textColor="@color/green" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/NewsTitleTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/deaths"
                        android:textAlignment="center" />

                    <TextView

                        android:id="@+id/deaths"
                        style="@style/PrimaryTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textAlignment="center"
                        android:textColor="@color/red" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>
</LinearLayout>