<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <com.google.android.material.card.MaterialCardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:elevation="1dp"
        app:contentPadding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/flag"
                    app:roundingBorderWidth="1dp"
                    app:roundingBorderColor="@color/background"
                    android:layout_width="100dp"
                    android:layout_height="70dp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/country_name"
                        android:layout_gravity="center"
                        style="@style/TitleTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Russia "
                        android:textAlignment="center"
                        android:textColor="@color/primary_text" />
                </FrameLayout>

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:orientation="vertical">

                    <TextView
                        style="@style/NewsTitleTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/cases"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/cases"
                        style="@style/PrimaryTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="11213123"
                        android:textAlignment="center"
                        android:textColor="@color/blue" />

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:orientation="vertical">

                    <TextView
                        style="@style/NewsTitleTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/recovered"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/recovered"
                        style="@style/PrimaryTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="11213123"
                        android:textAlignment="center"
                        android:textColor="@color/green" />

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/NewsTitleTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/deaths"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/deaths"
                        style="@style/PrimaryTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="11213123"
                        android:textAlignment="center"
                        android:textColor="@color/red" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>
